# web6-10g-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: sim-ci.yml
10g-core/: README.md
agentnet/: README.md
cli/: 10g.py  README.md
docs/: quickstart.md
docs/architecture/: 10g-system-architecture.md  protocol-stack.md  simulation-runtime.md
docs/rfcs/: RFC-10G-001-autonomous-network-fabric.md  RFC-10G-001.md  RFC-10G-002-agentnet-consensus-plane.md
examples/: basic_simulation.py  node_manifest_example.json
infra/topologies/: planetary-mesh.md
quantumlink/: README.md
schemas/: node-manifest.schema.json
simulator/: README.md  agentnet_sim.py  network_sim.py  quantumlink_sim.py  topology.json
telemetry/: sample-status.json
tests/: test_simulator.py
